src/test/deca/context/invalid/class/instance/new_bool.deca
// Description:
//    Création d'une instance de booléen
//
// Resultats:
//    undefined class boolean

{
	boolean a = new boolean();
}

